# RopUI

./: .gitignore  CMakeLists.txt  README.md
docs/Chinese/platform/: EventLoop.md  PC端TCP网络Watcher统一设计.md  RopHive调度层设计.md  跨平台调度器开发.md
docs/English/platform/: Mutiplatform_Design_of_TCP_Network_Watcher_for_PC.md
example/: CMakeLists.txt
example/cocoa_metal_bad_apple/: README.md
example/egl_window/: main.cpp
example/iocp_tcp_server_example/: CMakeLists.txt  client_50.py
example/linux_loop_core_test/: main.cc
example/log_test/: CMakeLists.txt  main.cc
example/poll_linux_test/: CMakeLists.txt  main.cc
example/rop_hive_epoll_demo/: CMakeLists.txt  main.cc
example/tcp_client_example/: main.cc
example/tcp_server_async_example/: app.cc
example/tcp_server_example/: main.cc  main_multithread.cc
example/win32_window_example/: main.cc
example/work_steal_trace_demo/: CMakeLists.txt  main.cc
platform/: CMakeLists.txt  eventloop_core.cc  eventloop_core.h
platform/linux/: CMakeLists.txt
platform/linux/eventloop/: poll_backend.cc  poll_backend.h
platform/linux/network/watcher/: tcp_connection_watcher.cc
platform/linux/schedule/: epoll_backend.cc  epoll_backend.h  eventloop.h  poll_backend.cc  poll_backend.h
platform/linux/schedule/watcher/: epoll_worker_wakeup.cc  epoll_worker_wakeup.h  poll_worker_wakeup.cc  poll_worker_wakeup.h
platform/macos/: CMakeLists.txt
platform/macos/network/watcher/: tcp_connect_watcher.cc
platform/macos/schedule/: cocoa_backend.h  cocoa_backend.mm  kqueue_backend.cc  kqueue_backend.h  poll_backend.cc  poll_backend.h
platform/macos/schedule/watcher/: cocoa_wakeup.h  cocoa_wakeup.mm  cocoa_worker_timer.h  cocoa_worker_timer.mm  cocoa_worker_wakeup.h  cocoa_worker_wakeup.mm  kqueue_wakeup.cc  kqueue_wakeup.h  kqueue_worker_timer.cc  kqueue_worker_timer.h  kqueue_worker_wakeup.cc  kqueue_worker_wakeup.h  poll_wakeup.cc  poll_wakeup.h  poll_worker_timer.cc  poll_worker_timer.h  poll_worker_wakeup.cc
platform/network/: ip_endpoint.cc  ip_endpoint.h
platform/network/watcher/: tcp_watchers.cc
platform/schedule/: compute_worker.cc  compute_worker.h  eventloop.cc  eventloop.h  eventloop_core.cc  eventloop_core.h  hive.cc  hive.h  io_worker.cc  io_worker.h  sched_trace.cc  sched_trace.h  worker_watcher.cc  worker_watcher.h
platform/windows/: CMakeLists.txt  win32_wrapper.cc  win32_wrapper.h
platform/windows/network/watcher/: tcp_accept_watcher.cc  tcp_accept_watcher.h  tcp_connect_watcher.cc  tcp_connect_watcher.h  tcp_connection_watcher.cc  tcp_connection_watcher.h  tcp_socket_common.h
platform/windows/schedule/: iocp_backend.cc  iocp_backend.h  win32_backend.cc  win32_backend.h
platform/windows/schedule/watcher/: iocp_wakeup.cc  iocp_wakeup.h  iocp_worker_wakeup.cc  iocp_worker_wakeup.h  win32_wakeup.cc  win32_wakeup.h  win32_worker_wakeup.cc  win32_worker_wakeup.h
tests/: CMakeLists.txt  hive_epoll_smoke_test.cc  ip_endpoint_test.cc  task_deque_test.cc  test_util.h
utils/: CMakeLists.txt
utils/concurrency/: CMakeLists.txt  task_deque.cc  task_deque.h
utils/log/: CMakeLists.txt
vg/: CMakeLists.txt
